HelloUltraviolet/Fixtures/RejectedSource/Expressions/InvalidCast/Source/Main.uv
//! Rejected cast specimen for an invalid primitive cast.

public procedure invalidCastReference() -> f32 {
    return true as f32
}
